--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index | COOKINATION</title>   
-    <meta name="description" content="You have entered in amazing world of cookination! Thanks to it you will improve fast your cooking habilities!">
+    <title>Index | COOKINATION</title>
+    <meta name="description"
+        content="You have entered in amazing world of cookination! Thanks to it you will improve fast your cooking habilities!">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -13,9 +14,7 @@
     <header class="header-principal">
         <div class="container">
             <a href="index.html">
-                <img src="img/logos/logo.png" class="header-logo" width="150"
-                height="auto" alt="Logo cooking">
-                
+                <img src="img/logos/logo.png" class="header-logo" width="150" alt="Logo cooking">
             </a>
             <nav>
                 <ul>
@@ -34,16 +33,16 @@
             <div class="input-container">
                 <input type="search" name="search" id="search" placeholder="Search for a meal...">
                 <svg class="input-icon-search" width="23" height="23" viewBox="0 0 23 23" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                d="M16.4288 13.9992L16.1834 14.3437L16.4825 14.6428L22.2071 20.3674C22.5976 20.7579 22.5976 21.3911 22.2071 21.7816C21.8166 22.172 21.1834 22.172 20.7929 21.7816L15.0683 16.057L14.7692 15.7579L14.4247 16.0032C13.0354 16.9927 11.3364 17.5745 9.5 17.5745C4.80558 17.5745 1 13.7689 1 9.07446C1 4.38004 4.80558 0.574463 9.5 0.574463C14.1944 0.574463 18 4.38004 18 9.07446C18 10.9108 17.4182 12.6099 16.4288 13.9992ZM9.5 2.57446C5.91015 2.57446 3 5.48461 3 9.07446C3 12.6643 5.91014 15.5745 9.5 15.5745C13.0898 15.5745 16 12.6643 16 9.07446C16 5.48461 13.0898 2.57446 9.5 2.57446Z"
-                fill="#79BAAB" stroke="#79BAAB" />
-            </svg>
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M16.4288 13.9992L16.1834 14.3437L16.4825 14.6428L22.2071 20.3674C22.5976 20.7579 22.5976 21.3911 22.2071 21.7816C21.8166 22.172 21.1834 22.172 20.7929 21.7816L15.0683 16.057L14.7692 15.7579L14.4247 16.0032C13.0354 16.9927 11.3364 17.5745 9.5 17.5745C4.80558 17.5745 1 13.7689 1 9.07446C1 4.38004 4.80558 0.574463 9.5 0.574463C14.1944 0.574463 18 4.38004 18 9.07446C18 10.9108 17.4182 12.6099 16.4288 13.9992ZM9.5 2.57446C5.91015 2.57446 3 5.48461 3 9.07446C3 12.6643 5.91014 15.5745 9.5 15.5745C13.0898 15.5745 16 12.6643 16 9.07446C16 5.48461 13.0898 2.57446 9.5 2.57446Z"
+                        fill="#79BAAB" stroke="#79BAAB" />
+                </svg>
+            </div>
         </div>
-    </div>
     </section>
     <div class="home-container">
-    <section class="articles-grid">
+        <section class="articles-grid">
             <div class="container-articles-grid">
                 <h2>
                     <span><span class="black-bar"> </span>Latest Meals<span class="black-bar"> </span></span>
@@ -104,26 +103,27 @@
         </section>
         <article class="Mini-chicken">
             <div class="mini-chicken-article-info">
-            <header>
-                <h4>
-                    Pick of the week
-                </h4>
-                <h5>
-                    Mini chicken pot pies
-                </h5>
-            </header>
-            <p class="intro">
-                When it’s cold and rainy outside there’s nothing better than a chicken pot pie. But if you’re
-                gluten-free or paleo it can be hard to find a delicious recipe that gets you excited and tastes as good
-                as the traditional version. Well, I think this recipe is gonna get you excited.
-            </p>
-            <p>            
-                <a class="link-button-appearance" href="https://www.freecodecamp.org/">View recipe</a>  
-            </p>
-        </div>
+                <header>
+                    <h4>
+                        Pick of the week
+                    </h4>
+                    <h5>
+                        Mini chicken pot pies
+                    </h5>
+                </header>
+                <p class="intro">
+                    When it’s cold and rainy outside there’s nothing better than a chicken pot pie. But if you’re
+                    gluten-free or paleo it can be hard to find a delicious recipe that gets you excited and tastes as
+                    good
+                    as the traditional version. Well, I think this recipe is gonna get you excited.
+                </p>
+                <p>
+                    <a class="link-button-appearance" href="https://www.freecodecamp.org/">View recipe</a>
+                </p>
+            </div>
             <img src="img/pick-week.jpg" alt="Logo cooking" class="article-image">
         </article>
-    </div>   
+    </div>
     <footer>
         <div class="social-container">
             <div class="text-container">
@@ -134,7 +134,8 @@
                     Receive a weekly email with new recipes and recommendations for your cooking
                 </p>
                 <form class="newsletter">
-                    <input type="text" name="email" id="email" required placeholder="Your email address" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                    <input type="text" name="email" id="email" required placeholder="Your email address"
+                        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                     <button type="submit">Suscribe</button>
                 </form>
             </div>
@@ -150,10 +151,10 @@
                             Follow us on
                         </p>
                         <ul class="list-images">
-                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" /></a></li>
-                            <li class="instagram"><a href=""><img src="img/icons/instagram.svg" /></a></li>
-                            <li class="youtube"><a href=""><img src="img/icons/youtube.svg" /></a></li>
-                            <li class="facebook"><a href=""><img src="img/icons/facebook.svg" /></a></li>
+                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" alt="twitter icon"/></a></li>
+                            <li class="instagram"><a href=""><img src="img/icons/instagram.svg" alt="instagram icon"/></a></li>
+                            <li class="youtube"><a href=""><img src="img/icons/youtube.svg" alt="youtube icon"/></a></li>
+                            <li class="facebook"><a href=""><img src="img/icons/facebook.svg" alt="facebook icon"/></a></li>
                         </ul>
                     </div>
                 </div>
@@ -168,7 +169,7 @@
                 </div>
             </div>
         </div>
-    
+
     </footer>
 </body>
 
