--- a/recipes.html
+++ b/recipes.html
@@ -14,7 +14,7 @@
         <div class="container">
             <a href="index.html">
                 <img src="img/logos/logo.png" class="header-logo" width="150"
-                height="auto" alt="Logo cooking">
+                 alt="Logo cooking">
             </a>
             <nav>
                 <ul>
@@ -270,10 +270,10 @@
                             Follow us on
                         </p>
                         <ul class="list-images">
-                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" /></a></li>
-                            <li class="instagram"><a href=""><img src="img/icons/instagram.svg" /></a></li>
-                            <li class="youtube"><a href=""><img src="img/icons/youtube.svg" /></a></li>
-                            <li class="facebook"><a href=""><img src="img/icons/facebook.svg" /></a></li>
+                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" alt="twitter icon"/></a></li>
+                            <li class="instagram"><a href=""><img src="img/icons/instagram.svg" alt="instagram icon"/></a></li>
+                            <li class="youtube"><a href=""><img src="img/icons/youtube.svg" alt="youtube icon"/></a></li>
+                            <li class="facebook"><a href=""><img src="img/icons/facebook.svg" alt="facebook icon"/></a></li>
                         </ul>
                     </div>
                 </div>
