--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop | COOKINATION</title>   
+    <title>Shop | COOKINATION</title>
     <meta name="description" content="Here you can find all the useful products to prepare all the receipes">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -13,8 +13,7 @@
     <header class="header-principal">
         <div class="container">
             <a href="index.html">
-                <img src="img/logos/logo.png" class="header-logo" width="150"
-                height="auto" alt="Logo cooking">
+                <img src="img/logos/logo.png" class="header-logo" width="150" alt="Logo cooking">
             </a>
             <nav>
                 <ul>
@@ -36,193 +35,193 @@
                 we can provide you with high quality content. Thank you!
             </p>
         </header>
-    </section>
-    <section class="main-content-container">
-        <section class="filters">
-            <div class="filter-option1">
-                <h3>
-                    categories
-                </h3>
-                <ul class="filter-option1-list">
-                    <li>
-                        <input type="checkbox" value="Kitchen Tools" id="Kitchen Tools">
-                        <label for="Kitchen Tools"> Kitchen Tools</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" value="Cookware" id="Cookware">
-                        <label for="Cookware"> Cookware</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" value="Cookbooks" id="Cookbooks">
-                        <label for="Cookbooks"> Cookbooks</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" value="Kitchen Electrics" id="Kitchen Electrics">
-                        <label for="Kitchen Electrics"> Kitchen Electrics</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" value="Storage" id="Storage">
-                        <label for="Storage"> Storage</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" value="Wellness Books" id="Wellness Books">
-                        <label for="Wellness Books"> Wellness Books</label>
-                    </li>
+        <section class="main-content-container">
+            <section class="filters">
+                <div class="filter-option1">
+                    <h3>
+                        categories
+                    </h3>
+                    <ul class="filter-option1-list">
+                        <li>
+                            <input type="checkbox" value="Kitchen-Tools" id="Kitchen-Tools">
+                            <label for="Kitchen-Tools"> Kitchen Tools</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="Cookware" id="Cookware">
+                            <label for="Cookware"> Cookware</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="Cookbooks" id="Cookbooks">
+                            <label for="Cookbooks"> Cookbooks</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="Kitchen-Electrics" id="Kitchen-Electrics">
+                            <label for="Kitchen-Electrics"> Kitchen Electrics</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="Storage" id="Storage">
+                            <label for="Storage"> Storage</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="Wellness-Books" id="Wellness-Books">
+                            <label for="Wellness-Books"> Wellness Books</label>
+                        </li>
 
-                </ul>
-            </div>
+                    </ul>
+                </div>
+                <div class="search-filter">
+                    <h3>
+                        Search
+                    </h3>
+                    <div class="input-container">
+                        <input type="search" name="search" id="search" placeholder="Enter keyword">
+                        <svg class="input-icon-search" width="23" height="23" viewBox="0 0 23 23" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M16.4288 13.9992L16.1834 14.3437L16.4825 14.6428L22.2071 20.3674C22.5976 20.7579 22.5976 21.3911 22.2071 21.7816C21.8166 22.172 21.1834 22.172 20.7929 21.7816L15.0683 16.057L14.7692 15.7579L14.4247 16.0032C13.0354 16.9927 11.3364 17.5745 9.5 17.5745C4.80558 17.5745 1 13.7689 1 9.07446C1 4.38004 4.80558 0.574463 9.5 0.574463C14.1944 0.574463 18 4.38004 18 9.07446C18 10.9108 17.4182 12.6099 16.4288 13.9992ZM9.5 2.57446C5.91015 2.57446 3 5.48461 3 9.07446C3 12.6643 5.91014 15.5745 9.5 15.5745C13.0898 15.5745 16 12.6643 16 9.07446C16 5.48461 13.0898 2.57446 9.5 2.57446Z"
+                                fill="#79BAAB" stroke="#79BAAB" />
+                        </svg>
+                    </div>
+                </div>
+            </section>
 
-            <div class="search-filter">
-                <h3>
-                    Search
-                </h3>
-                <div class="input-container">
-                    <input type="search" name="search" id="search" placeholder="Enter keyword">
-                    <svg class="input-icon-search" width="23" height="23" viewBox="0 0 23 23" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M16.4288 13.9992L16.1834 14.3437L16.4825 14.6428L22.2071 20.3674C22.5976 20.7579 22.5976 21.3911 22.2071 21.7816C21.8166 22.172 21.1834 22.172 20.7929 21.7816L15.0683 16.057L14.7692 15.7579L14.4247 16.0032C13.0354 16.9927 11.3364 17.5745 9.5 17.5745C4.80558 17.5745 1 13.7689 1 9.07446C1 4.38004 4.80558 0.574463 9.5 0.574463C14.1944 0.574463 18 4.38004 18 9.07446C18 10.9108 17.4182 12.6099 16.4288 13.9992ZM9.5 2.57446C5.91015 2.57446 3 5.48461 3 9.07446C3 12.6643 5.91014 15.5745 9.5 15.5745C13.0898 15.5745 16 12.6643 16 9.07446C16 5.48461 13.0898 2.57446 9.5 2.57446Z"
-                            fill="#79BAAB" stroke="#79BAAB" />
-                    </svg>
+            <section class="articles-grid">
+                <div class="container-articles-grid-photos">
+                    <article class="container-articles-grid-link">
+                        <a href="" title="Ninja Max Air Fryer product">
+                            <img src="img/shop/airfryer.jpg" alt="Ninja Max Air Fryer">
+                            <h3>
+                                Ninja Max Air Fryer
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="container-articles-grid-link">
+                        <a href="" title="Crock-Pot Slow Cooker product">
+                            <img src="img/shop/crockpot.jpg" alt="Crock-Pot Slow Cooker">
+                            <h3>
+                                Crock-Pot Slow Cooker
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="container-articles-grid-link">
+                        <a href="" title="Wine Bottle Opener product">
+                            <img src="img/shop/wineopener.jpg" alt="Wine Bottle Opener">
+                            <h3>
+                                Wine Bottle Opener
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="container-articles-grid-link">
+                        <a href="" title="Stainless Steel Skewers product">
+                            <img src="img/shop/skewers.jpg" alt="Stainless Steel Skewers">
+                            <h3>
+                                Stainless Steel Skewers
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="container-articles-grid-link">
+                        <a href="" title="Food Scrapers product">
+                            <img src="img/shop/foodscrapers.jpg" alt="Food Scrapers">
+                            <h3>
+                                Food Scrapers
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="container-articles-grid-link">
+                        <a href="" title="Nonstick Pan Set product">
+                            <img src="img/shop/pans.jpg" alt="Nonstick Pan Set">
+                            <h3>
+                                Nonstick Pan Set
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="container-articles-grid-link">
+                        <a href="" title="Mason Jar product">
+                            <img src="img/shop/jar.jpg" alt="Mason Jar">
+                            <h3>
+                                Mason Jar
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="container-articles-grid-link">
+                        <a href="" title="Glass Batter Bowl product">
+                            <img src="img/shop/bowl.jpg" alt="Glass Batter Bowl">
+                            <h3>
+                                Glass Batter Bowl
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="container-articles-grid-link">
+                        <a href="" title="Carving Knife & Fork Set product">
+                            <img src="img/shop/knifeandfork.jpg" alt="Carving Knife & Fork Set">
+                            <h3>
+                                Carving Knife & Fork Set
+                            </h3>
+                        </a>
+                    </article>
+                </div>
+                <nav class="pagination-nav">
+                    <ul>
+                        <li><a class="pagination-nav-link-selected" href="">1</a></li>
+                        <li><a class="pagination-nav-link" href="">2</a></li>
+                        <li><a class="pagination-nav-link" href="">3</a></li>
+                        <li><a class="pagination-nav-link" href="">4</a></li>
+                        <li><a class="pagination-nav-link" href="">5</a></li>
+                        <li><a class="pagination-nav-link" href="">6</a></li>
+                        <li><a class="pagination-nav-link" href="">7</a></li>
+                        <li><a class="pagination-nav-link" href="">>></a></li>
+                    </ul>
+                </nav>
+            </section>
+        </section>
+        </section>
+        <footer>
+            <div class="social-container">
+                <div class="text-container">
+                    <h5>
+                        NEWSLETTER
+                    </h5>
+                    <p>
+                        Receive a weekly email with new recipes and recommendations for your cooking
+                    </p>
+                    <form class="newsletter">
+                        <input type="text" name="email" id="email" required placeholder="Your email address"
+                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                        <button type="submit">Suscribe</button>
+                    </form>
                 </div>
             </div>
-        </section>
-
-        <section class="articles-grid">
-            <div class="container-articles-grid-photos">
-                <article class="container-articles-grid-link">
-                    <a href="" title="Ninja Max Air Fryer product">
-                        <img src="img/shop/airfryer.jpg" alt="Ninja Max Air Fryer">
-                        <h3>
-                            Ninja Max Air Fryer
-                        </h3>
-                    </a>
-                </article>
-                <article class="container-articles-grid-link">
-                    <a href="" title="Crock-Pot Slow Cooker product">
-                        <img src="img/shop/crockpot.jpg" alt="Crock-Pot Slow Cooker">
-                        <h3>
-                            Crock-Pot Slow Cooker
-                        </h3>
-                    </a>
-                </article>
-                <article class="container-articles-grid-link">
-                    <a href="" title="Wine Bottle Opener product">
-                        <img src="img/shop/wineopener.jpg" alt="Wine Bottle Opener">
-                        <h3>
-                            Wine Bottle Opener
-                        </h3>
-                    </a>
-                </article>
-                <article class="container-articles-grid-link">
-                    <a href="" title="Stainless Steel Skewers product">
-                        <img src="img/shop/skewers.jpg" alt="Stainless Steel Skewers">
-                        <h3>
-                            Stainless Steel Skewers
-                        </h3>
-                    </a>
-                </article>
-                <article class="container-articles-grid-link">
-                    <a href="" title="Food Scrapers product">
-                        <img src="img/shop/foodscrapers.jpg" alt="Food Scrapers">
-                        <h3>
-                            Food Scrapers
-                        </h3>
-                    </a>
-                </article>
-                <article class="container-articles-grid-link">
-                    <a href="" title="Nonstick Pan Set product">
-                        <img src="img/shop/pans.jpg" alt="Nonstick Pan Set">
-                        <h3>
-                            Nonstick Pan Set
-                        </h3>
-                    </a>
-                </article>
-                <article class="container-articles-grid-link">
-                    <a href="" title="Mason Jar product">
-                        <img src="img/shop/jar.jpg" alt="Mason Jar">
-                        <h3>
-                            Mason Jar
-                        </h3>
-                    </a>
-                </article>
-                <article class="container-articles-grid-link">
-                    <a href="" title="Glass Batter Bowl product">
-                        <img src="img/shop/bowl.jpg" alt="Glass Batter Bowl">
-                        <h3>
-                            Glass Batter Bowl
-                        </h3>
-                    </a>
-                </article>
-                <article class="container-articles-grid-link">
-                    <a href="" title="Carving Knife & Fork Set product">
-                        <img src="img/shop/knifeandfork.jpg" alt="Carving Knife & Fork Set">
-                        <h3>
-                            Carving Knife & Fork Set
-                        </h3>
-                    </a>
-                </article>
-            </div>
-            <nav class="pagination-nav">
-                <ul>
-                    <li><a class="pagination-nav-link-selected" href="">1</a></li>
-                    <li><a class="pagination-nav-link" href="">2</a></li>
-                    <li><a class="pagination-nav-link" href="">3</a></li>
-                    <li><a class="pagination-nav-link" href="">4</a></li>
-                    <li><a class="pagination-nav-link" href="">5</a></li>
-                    <li><a class="pagination-nav-link" href="">6</a></li>
-                    <li><a class="pagination-nav-link" href="">7</a></li>
-                    <li><a class="pagination-nav-link" href="">>></a></li>
-                </ul>
-            </nav>
-        </section>
-    </section>
-    <footer>
-        <div class="social-container">
-            <div class="text-container">
-                <h5>
-                    NEWSLETTER
-                </h5>
-                <p>
-                    Receive a weekly email with new recipes and recommendations for your cooking
-                </p>
-                <form class="newsletter">
-                    <input type="text" name="email" id="email" required placeholder="Your email address" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
-                    <button type="submit">Suscribe</button>
-                </form>
-            </div>
-        </div>
-        <div class="social-media">
-            <div class="separator-contents">
-                <div class="social-media-links">
-                    <p class="bold-paragraph">
-                        Simple recipes that make you feel good
-                    </p>
-                    <div class="social-media-links-icons">
-                        <p>
-                            Follow us on
+            <div class="social-media">
+                <div class="separator-contents">
+                    <div class="social-media-links">
+                        <p class="bold-paragraph">
+                            Simple recipes that make you feel good
                         </p>
-                        <ul class="list-images">
-                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" /></a></li>
-                            <li class="instagram"><a href=""><img src="img/icons/instagram.svg" /></a></li>
-                            <li class="youtube"><a href=""><img src="img/icons/youtube.svg" /></a></li>
-                            <li class="facebook"><a href=""><img src="img/icons/facebook.svg" /></a></li>
+                        <div class="social-media-links-icons">
+                            <p>
+                                Follow us on
+                            </p>
+                            <ul class="list-images">
+                                <li class="twitter"><a href=""><img src="img/icons/twitter.svg" alt="twitter icon"/></a></li>
+                                <li class="instagram"><a href=""><img src="img/icons/instagram.svg" alt="instagram icon"/></a></li>
+                                <li class="youtube"><a href=""><img src="img/icons/youtube.svg" alt="youtube icon"/></a></li>
+                                <li class="facebook"><a href=""><img src="img/icons/facebook.svg" alt="facebook icon"/></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="social-media-resources">
+                        <p class="student-data">2022 &copy; Marta Vives Luis</p>
+                        <ul class="web-links-interest">
+                            <li><a href="">Terms and conditions</a></li>
+                            <li><a href="">Privacy policy</a></li>
+                            <li><a href="">Cookies</a></li>
                         </ul>
                     </div>
                 </div>
-                <hr>
-                <div class="social-media-resources">
-                    <p class="student-data">2022 &copy; Marta Vives Luis</p>
-                    <ul class="web-links-interest">
-                        <li><a href="">Terms and conditions</a></li>
-                        <li><a href="">Privacy policy</a></li>
-                        <li><a href="">Cookies</a></li>
-                    </ul>
-                </div>
             </div>
-        </div>
 
-    </footer>
+        </footer>
 </body>
 
 
