--- a/videos.html
+++ b/videos.html
@@ -16,7 +16,7 @@
         <div class="container">
             <a href="index.html">
                 <img src="img/logos/logo.png" class="header-logo" width="150"
-                height="auto" alt="Logo cooking">
+                alt="Logo cooking">
             </a>
             <nav>
                 <ul>
@@ -40,7 +40,7 @@
         <div class="videos-list-cards">
             <article class="video-card">
                 <iframe class="video-player" src="https://www.youtube.com/embed/No_ZNOq0axM?showinfo=1"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media;" allowfullscreen>
                 </iframe>
                 <div class="video-description">
@@ -56,7 +56,7 @@
             </article>
             <article class="video-card">
                 <iframe class="video-player" src="https://www.youtube.com/embed/rVDftilsnSY"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media;" allowfullscreen>
                 </iframe>
                 <div class="video-description">
@@ -72,7 +72,7 @@
             </article>
             <article class="video-card">
                 <iframe class="video-player" src="https://www.youtube.com/embed/KRVeVAaZhaE"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media;" allowfullscreen>
                 </iframe>
                 <div class="video-description">
@@ -88,7 +88,7 @@
             </article>
             <article class="video-card">
                 <iframe class="video-player" src="https://www.youtube.com/embed/A9D6v9hgYv8"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media;" allowfullscreen>
                 </iframe>
                 <div class="video-description">
@@ -104,7 +104,7 @@
             </article>
             <article class="video-card">
                 <iframe class="video-player" src="https://www.youtube.com/embed/aN9oxJHnBrE"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media;" allowfullscreen>
                 </iframe>
                 <div class="video-description">
@@ -120,7 +120,7 @@
             </article>
             <article class="video-card">
                 <iframe class="video-player" src="https://www.youtube.com/embed/2YavEuVd5Do"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media;" allowfullscreen>
                 </iframe>
                 <div class="video-description">
@@ -134,7 +134,6 @@
                 </div>
             </article>
         </div>
-
     </section>
     <footer>
         <div class="social-container">
@@ -162,10 +161,10 @@
                             Follow us on
                         </p>
                         <ul class="list-images">
-                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" /></a></li>
-                            <li class="instagram"><a href=""><img src="img/icons/instagram.svg" /></a></li>
-                            <li class="youtube"><a href=""><img src="img/icons/youtube.svg" /></a></li>
-                            <li class="facebook"><a href=""><img src="img/icons/facebook.svg" /></a></li>
+                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" alt="twitter icon"/></a></li>
+                            <li class="instagram"><a href=""><img src="img/icons/instagram.svg" alt="instagram icon"/></a></li>
+                            <li class="youtube"><a href=""><img src="img/icons/youtube.svg" alt="youtube icon"/></a></li>
+                            <li class="facebook"><a href=""><img src="img/icons/facebook.svg" alt="facebook icon"/></a></li>
                         </ul>
                     </div>
                 </div>
